--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page Title</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 	<!--headings -->
 	<h1>This is heading one</h1>
