--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html> 
 <html>
 <head>
-	<title>Page Title</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Miniature-Happiness</title>
+	<link rel="stylesheet" type="text/css" href="style_index.css">
 <body>
-	<!--headings -->
-	<h1>This is heading one</h1>
-	<h2>This is heading two</h2>
-
+	<!--header/top bar-->
+	<header>
+		<div class="container">
+			<h1>Minature Happiness</h1>
+			<nav>
+				<ul>
+					<li><a href=index.html>Home</a></li>
+					<li><a href="school.html">schoolwork</a></li>
+					<li><a href="project.html">Project</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>	
 	<!--paragraph -->
 	<p>
 		Paragraph 1 : <strong>BOLD</strong>
