--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 				</ul>
 			</nav>
 		</div>
+
+		<div class="sidenav">
+  			<a href="#">SideBar1</a>
+  			<a href="#">SideBar2</a>
+  			<a href="#">SideBar3</a>
+  			<a href="#">SideBar4</a>
+		</div>
 	</header>	
 	<!--paragraph -->
 	<p>
