--- a/index.html
+++ b/index.html
@@ -18,116 +18,21 @@
 		</div>
 
 		<div class="sidenav">
-  			<a href="#">SideBar1</a>
+  			<a href=index.html#SYS>May 2020</a>
   			<a href="#">SideBar2</a>
   			<a href="#">SideBar3</a>
   			<a href="#">SideBar4</a>
 		</div>
-	</header>	
-	<!--paragraph -->
-	<p>
-		Paragraph 1 : <strong>BOLD</strong>
-	</p>
-	<p>
-		Paragraph 2:<em>EM</em>
-	</p>
-	<p>
-		Paragraph 3:<a href="http://google.com">Pressable Link</a>
-	</p>
-	<p>
-		Paragraph 4:<a href=blog.html>Pressable Link to another html</a>
-	</p>
-	<p>
-		Paragraph 5:<a href="http://google.com" target="_blank">Pressable Link in new tab</a>
-	</p>
+	</header>
 
-	<!--List -->
-	<ul>
-		<li>Unordered List Item 1</li>
-		<li>Unordered List Item 2</li>
-	</ul>
-	<ol>
-		<li>Ordered List Item 1</li>
-		<li>Ordered List Item 2</li>
-	</ol>
+	<!--paragraph/card-->
+	<div id=may2020 class="card" style="border:solid">
+      <h1>My first webpage with Github</h1>
+      <h5>May 2020</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
 
-	<!--Table -->
-	<table>
-		<thread>
-			<tr>
-				<th>Name</th>
-				<th>Age</th>
-			</tr>
-		</thread>
-		<tbody>
-			<tr>
-				<td>MyName1</td>
-				<td>MyAge1</td>
-			</tr>
-			<tr>
-				<td>MyName2</td>
-				<td>MyAge2</td>
-			</tr>
-		</tbody>
-	</table>
-
-	<!--Line Breaker -->
-	<br>
-
-	<!--Line -->
-	<hr>
-
-	<!--Forms -->
-	<form action="process.php" method="POST/GET"> 
-		<label>First Name</label>
-		<input type="text" name="firstName" placeholder="Enter First Name">
-
-		<label>Last Name</label>
-		<input type="text" name="lastName">
-
-		<label>Gender</label>
-		<select name="gender">
-			<option value="male">Male</option>
-			<option value="female">Female</option>
-			<option value="other">Other</option>
-		</select>
-
-		<br>
-		<br>
-
-		<label>Message</label>
-		<textarea name="message"></textarea> 
-
-		<br>
-		<br>
-		<input type="submit" name="submit" value="Submit"> <!--Submit to process.php -->
-
-	</form>
-
-	<!--Button -->
-	<button click="someFunction">Click Me</button>
-	<br>
-
-	<!--Image+Go to page if no taget (Note:alt is if img cannot be found) -->
-	<a href="images/cat.jfif">
-		<img src="images/cat.jfif" alt="My Sample Image"
-		width="200">
-	</a>
-
-	<!--Quotations (note: website only found in source code) -->
-	<blockquote cite="http://traversymedia.com">
-		HIHI
-	</blockquote>
-
-	<!--Abbrevation (Hover over for full explanation) -->
-	<p>
-		The <abbr title="System"> SYS </abbr>is awesome 
-	</p>
-	<!--Scroll -->
-	<div style="margin-top: 300px"></div>
-
-<style>
-</style>
 </body>
 </head>
 </html> 
